--- a/src/RushRoyale.WebUI/_Imports.razor
+++ b/src/RushRoyale.WebUI/_Imports.razor
@@ -5,6 +5,9 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
+@using MudBlazor
+@using RushRoyale.WebApiClient
 @using RushRoyale.WebUI
 @using RushRoyale.WebUI.Shared
