--- a/src/RushRoyale.WebUI/Shared/FactionIcon.razor
+++ b/src/RushRoyale.WebUI/Shared/FactionIcon.razor
@@ -12,7 +12,7 @@
     public bool IsSelected { get; set; }
 
     [Parameter]
-    public Size Size { get; set; }
+    public Size Size { get; set; } = Size.Medium;
 
     [Parameter]
     public bool IsButton { get; set; }
