💄 Initial talents work

--- a/src/RushRoyale.WebUI/Pages/Wiki/Units/ViewUnit.razor
+++ b/src/RushRoyale.WebUI/Pages/Wiki/Units/ViewUnit.razor
@@ -28,6 +28,12 @@ else
                 @_unit.Description
             </MudText>
         </MudPaper>
+        
+        <MudDivider Class="mt-4"/>
+        
+        <MudCard Class="mt-4 px-4 py-4">
+            <TalentsOverview Value="_unit.Talents" />
+        </MudCard>
     </MudContainer>
 }
 
