🐛 Fix casing when deployed to linux

--- a/src/RushRoyale.WebUI/Shared/FactionIcon.razor
+++ b/src/RushRoyale.WebUI/Shared/FactionIcon.razor
@@ -1,7 +1,7 @@
 ﻿@using RushRoyale.WebUI.Models
 
 <div @onclick="@HandleClick">
-    <MudImage Src="@("/assets/sprite/" + Value.IconUrl + ".png")" Class="@GetClass()" />
+    <MudImage Src="@("/assets/Sprite/" + Value.IconUrl + ".png")" Class="@GetClass()" />
 </div>
 
 @code {
