--- a/src/RushRoyale.WebUI/Shared/TalentCard.razor
+++ b/src/RushRoyale.WebUI/Shared/TalentCard.razor
@@ -1,6 +1,6 @@
 ﻿@using RushRoyale.WebUI.Models
 
-<MudImage Src="@("/assets/sprite/" + Value.IconUrl + ".png")" Width="48" Fluid/>
+<MudImage Src="@("/assets/Sprite/" + Value.IconUrl + ".png")" Width="48" Fluid/>
 
 @code {
     [Parameter]
