--- a/src/RushRoyale.WebUI/Shared/UnitCard.razor
+++ b/src/RushRoyale.WebUI/Shared/UnitCard.razor
@@ -3,7 +3,7 @@
 @inject NavigationManager NavigationManager
 
 <div class="@GetClass()" @onclick="HandleClick">
-    <MudImage Src="@("assets/sprite/" + Value.IconUrl + ".png")"></MudImage>
+    <MudImage Src="@("assets/Sprite/" + Value.IconUrl + ".png")"></MudImage>
 </div>
 @code {
 
