💄 Developer experience/tools

--- a/src/RushRoyale.WebUI/Pages/Wiki/Units/UnitList.razor
+++ b/src/RushRoyale.WebUI/Pages/Wiki/Units/UnitList.razor
@@ -34,7 +34,9 @@ else
             }
             @foreach (var unit in filteredUnits)
             {
-                <UnitCard Value="unit" Size="Size.Large" IsButton/>
+                <div class="unit-wrapper">
+                    <UnitCard Value="unit" Size="Size.Large" IsButton/>
+                </div>
             }
         </div>
     </MudContainer>
