--- a/src/RushRoyale.WebUI/_Imports.razor
+++ b/src/RushRoyale.WebUI/_Imports.razor
@@ -12,3 +12,5 @@
 @using RushRoyale.WebUI
 @using RushRoyale.WebUI.Shared
 @using RushRoyale.WebUI.Services
+@using RushRoyale.WebUI.Models
+@using Humanizer
