--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -1,4 +1,7 @@
-﻿<MudNavMenu Class="mud-width-full pt-4">
+﻿@using Microsoft.Extensions.Options
+@inject IOptions<Developer> Developer
+
+<MudNavMenu Class="mud-width-full pt-4">
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Filled.Dashboard">Dashboard</MudNavLink>
     <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook" Expanded>
         <MudNavLink Href="/wiki/units" Icon="@Icons.Filled.PersonPinCircle">Units</MudNavLink>
@@ -14,4 +17,10 @@
             <MudNavLink Href="/wiki/ladders/hero-tavern">Hero Tavern</MudNavLink>
         </MudNavGroup>
     </MudNavGroup>
+    @if (Developer.Value.Enabled)
+    {
+        <MudNavGroup Title="Developer" Icon="@Icons.Filled.Code" Expanded>
+            <MudNavLink Href="/developer/data-editor">Data Editor</MudNavLink>
+        </MudNavGroup>
+    }
 </MudNavMenu>
