--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -6,6 +6,7 @@
 
 <MudNavMenu Class="mud-width-full pt-4">
     <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Filled.Dashboard">Dashboard</MudNavLink>
+    <MudNavLink Href="/news" Match="NavLinkMatch.All" Icon="@Icons.Filled.Newspaper">News</MudNavLink>
     <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook" Expanded>
         <MudNavLink Href="/wiki/units" Icon="@Icons.Filled.PersonPinCircle">Units</MudNavLink>
         <MudNavLink Href="/wiki/heroes" Icon="@Icons.Filled.EmojiPeople">Heroes</MudNavLink>
