--- a/src/RushRoyale.WebUI/Pages/Index.razor
+++ b/src/RushRoyale.WebUI/Pages/Index.razor
@@ -2,8 +2,12 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<MudText Class="mb-4" Typo="Typo.h3" Color="Color.Primary">Getting Started!</MudText>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?"/>
+<div class="d-flex flex-wrap">
+    <MudCard Class="ma-2 pa-4">
+        <MudButton Color="Color.Primary" Class="ma-2" Variant="Variant.Filled" Href="/player-tools/my-profile">Set up your Profile!</MudButton>
+        <MudButton Color="Color.Secondary" Class="ma-2" Variant="Variant.Filled" Href="/wiki/units">Learn about the Units!</MudButton>
+        <MudButton Color="Color.Tertiary" Class="ma-2" Variant="Variant.Filled" Href="/news">Catch up on the latest News!</MudButton>
+    </MudCard>
+</div>
