--- a/src/RushRoyale.WebUI/Shared/MainLayout.razor
+++ b/src/RushRoyale.WebUI/Shared/MainLayout.razor
@@ -50,6 +50,10 @@
     </MudMainContent>
 </MudLayout>
 
+<MudScrollToTop>
+    <MudButton Variant="Variant.Filled" StartIcon="@Icons.Filled.ArrowUpward" Color="Color.Tertiary">Go to top</MudButton>
+</MudScrollToTop>
+
 <DeveloperDrawer @bind-Open="_drawerOpen"/>
 
 <MudThemeProvider IsDarkMode/>
