🚧 Initial Deck Suggestions UI

--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -9,6 +9,7 @@
     <MudNavLink Href="/news" Match="NavLinkMatch.All" Icon="@Icons.Filled.Newspaper">News</MudNavLink>
     <MudNavGroup Title="Player Tools" Icon="@Icons.Filled.Person" Expanded>
         <MudNavLink Href="/player-tools/my-profile">My Profile</MudNavLink>
+        <MudNavLink Href="/player-tools/deck-suggestions">Deck Suggestions</MudNavLink>
     </MudNavGroup>
     <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook" Expanded>
         <MudNavLink Href="/wiki/units" Icon="@Icons.Filled.PersonPinCircle">Units</MudNavLink>
