--- a/src/RushRoyale.WebUI/Shared/DeckOverview.razor
+++ b/src/RushRoyale.WebUI/Shared/DeckOverview.razor
@@ -1,16 +1,23 @@
 ﻿<MudCard Class="@GetClass()" >
     @foreach (var unit in Units)
     {
-        <UnitCard Value="unit"/>
+        var playerUnit = PlayerUnits?.FirstOrDefault(x => x.UnitId == unit.Id);
+        <UnitCard Value="unit" PlayerUnit="playerUnit"/>
     }
 </MudCard>
 
 @code {
     [Parameter]
     public List<Unit> Units { get; set; }
+    
+    [Parameter]
+    public List<PlayerUnit>? PlayerUnits { get; set; }
 
     [Parameter]
     public string Class { get; set; }
 
+    [Parameter]
+    public bool Disabled { get; set; }
+    
     private string GetClass() => "d-inline-flex pa-4 " + Class;
 }
