--- a/src/RushRoyale.WebUI/Shared/UnitCard.razor
+++ b/src/RushRoyale.WebUI/Shared/UnitCard.razor
@@ -3,13 +3,13 @@
 @inject NavigationManager NavigationManager
 
 <div class="@GetClass()" @onclick="HandleClick">
-    @if (Level is null or 0)
+    @if (PlayerUnit?.UnitLevel is null or 0)
     {
         @Image
     }
     else
     {
-        <MudBadge Overlap Content="@(Level)" Color="Color.Secondary">
+        <MudBadge Overlap Content="@(PlayerUnit.UnitLevel)" Color="Color.Secondary">
             @Image
         </MudBadge>
     }
@@ -19,7 +19,10 @@
 
     [Parameter]
     public Unit Value { get; set; } = null!;
-
+    
+    [Parameter]
+    public PlayerUnit? PlayerUnit { get; set; }
+    
     [Parameter]
     public Size Size { get; set; } = Size.Medium;
     
@@ -28,9 +31,6 @@
     
     [Parameter]
     public bool Disabled { get; set; }
-    
-    [Parameter]
-    public int? Level { get; set; }
 
     private RenderFragment Image =>
         @<MudImage Src="@("assets/Sprite/" + Value.IconUrl + ".png")"/>;
@@ -51,7 +51,7 @@
         Rarity.Epic => "unit-epic",
         Rarity.Legendary => "unit-legendary",
         _ => throw new ArgumentOutOfRangeException()
-    } + " " + (Disabled ? "unit-disabled" : "");
+    } + " " + (Disabled || (PlayerUnit is not null && PlayerUnit.UnitLevel <= 0) ? "unit-disabled" : "");
 
     protected override void OnParametersSet()
     {
