--- a/src/RushRoyale.WebUI/Shared/NavMenu.razor
+++ b/src/RushRoyale.WebUI/Shared/NavMenu.razor
@@ -11,7 +11,7 @@
         <MudNavLink Href="/player-tools/my-profile">My Profile</MudNavLink>
         <MudNavLink Href="/player-tools/deck-suggestions">Deck Suggestions</MudNavLink>
     </MudNavGroup>
-    <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook" Expanded>
+    <MudNavGroup Title="Wiki" Icon="@Icons.Filled.MenuBook">
         <MudNavLink Href="/wiki/units" Icon="@Icons.Filled.PersonPinCircle">Units</MudNavLink>
         <MudNavLink Href="/wiki/heroes" Icon="@Icons.Filled.EmojiPeople">Heroes</MudNavLink>
         <MudNavLink Href="/wiki/items" Icon="@Icons.Filled.Backpack">Items</MudNavLink>
@@ -25,7 +25,7 @@
             <MudNavLink Href="/wiki/ladders/hero-tavern">Hero Tavern</MudNavLink>
         </MudNavGroup>
     </MudNavGroup>
-    <MudNavGroup Title="Data Mine" Icon="@Icons.Filled.Handyman" Expanded>
+    <MudNavGroup Title="Data Mine" Icon="@Icons.Filled.Handyman">
         <MudNavLink Href="/data-mine/localization">Localization</MudNavLink>
     </MudNavGroup>
     @if (ToolsService.IsDeveloper)
